--- a/index.html
+++ b/index.html
@@ -172,64 +172,7 @@
 </style>
 
 <body>
-        <div class="card">
-        <div class="header">
-            <img src="IMG-3152.jpg">
-            <h3>Rohan Bhavsar</h3>
-            <p>Electrical & Electronics</p>
-        </div>
-
-        <div class="body">
-            <ul>
-                <li>
-                    <h3><a href="Tel:+15063819490">+1-(506)-381-9490 </a></h3>
-                    <p>Mobile number</p>
-                    <i class="fas fa-mobile-alt"></i>
-                </li>
-                <li>
-                    <h3><a href="mailto:rohan.1290@gmail.com">rohan.1290@gmail.com</a></h3>
-                    <p>Email address</p>
-                    <i class="fas fa-envelope"></i>
-                </li>
-                <li>
-                    <h3><a href="https://Area52.ca" target="_blank">area52.ca</h3>
-                    <p>Website</p>
-                    <i class="fas fa-globe-americas"></i>
-                </li>
-                <li>
-                    <h3><a href="https://www.google.com/maps/place/Moncton,+NB/@46.113255,-64.8006006,12z/data=!3m1!4b1!4m5!3m4!1s0x4ca0b92918d41765:0xdc10a333a4e63c4!8m2!3d46.0878165!4d-64.7782313" target="_blank">Moncton,NB</h3>
-                    <p>Location</p>
-                    <i class="fas fa-location-arrow"></i>
-                </li>
-            </ul>
-        </div>
-
-        <div class="footer">
-            <ul>
-                <li>
-                    <a href="https://www.facebook.com/rohan.n.bhavsar" target="_blank">
-                    <i class="fab fa-facebook-f"></i>
-                    </a>
-                </li>
-                <li>
-                    <a href="https://www.facebook.com/rohan.n.bhavsar" target="_blank"></a>
-                    <i class="fab fa-snapchat"></i>
-                    </a>
-                </li>
-                <li>
-                    <a href="https://www.instagram.com/rohan1290/" target="_blank">
-                    <i class="fab fa-instagram"></i>
-                    </a>
-                </li>
-                <li>
-                    <a href="https://www.linkedin.com/in/rohan-bhavsar-9490/" target="_blank">
-                    <i class="fab fa-linkedin-in"></i>
-                    </a>
-                </li>
-            </ul>
-        </div>
-
-    </div>
+        <h1>Heya new business in town yo</h1>>
 
 </body>
 
